finished general page styling

--- a/Desktop/Secret Recipes/index.html
+++ b/Desktop/Secret Recipes/index.html
@@ -23,7 +23,7 @@
             </div>
             <a href = '#'>JOIN</a>
         </div>
-        <h2>A safe, secure place for your favorite recipes</h2>
+        <h3>A safe, secure place for your favorite recipes</h3>
     </section>
     <section class= 'bottomContent'>
         <p>
@@ -50,12 +50,17 @@
             </div>
         </div>
         <img src = 'Assets/table.jpg'>
-        <p>
+        <h3>Share and discover recipes</h3>
+        <p class = 'bottomPar'>
             Pellentesque eu tincidunt est. Donec auctor sapien sed erat faucibus consequat. Sed non magna volutpat, porttitor nisi sit amet, facilisis lacus. Etiam eu quam quis nisi euismod malesuada. Nunc imperdiet est eget viverra blandit. Quisque odio nunc, ullamcorper eget ex at, lacinia pharetra velit.Pellentesque eu tincidunt est. Donec auctor sapien sed erat faucibus consequat. Sed non magna volutpat, porttitor nisi sit amet, facilisis lacus. Etiam eu quam quis nisi euismod malesuada. Nunc imperdiet est eget viverra blandit. Quisque odio nunc, ullamcorper eget ex at, lacinia pharetra velit. Ut vehicula placerat purus non elementum. Donec mollis mi et felis finibus lacinia a eu dui. Donec faucibus, erat at interdum sagittis, elit odio rutrum ligula, vel hendrerit lacus dolor quis lorem. Aliquam vel semper nisl, a pharetra ante. Vivamus eget euismod leo, at euismod ligula. Praesent finibus sapien turpis, in pellentesque magna convallis vitae. Mauris finibus, quam at consectetur eleifend, justo ex fermentum leo, a sodales orci lorem id risus.
         </p>
     </section>
     <footer>
-
+        <div class = 'iconBox'>
+            <a href = '#'><img class = 'icon' src = 'Assets/Instagram Icon.png'></a>
+            <a href = '#'><img class = 'icon' src = 'Assets/facebook Icon.png'></a>
+            <a href = '#'><img class = 'icon' src = 'Assets/Twitter Icon.png'></a>
+        </div>
     </footer>
 </body>
 </html>
