added media queries and about page

--- a/Desktop/Secret Recipes/Home/index.html
+++ b/Desktop/Secret Recipes/Home/index.html
@@ -10,8 +10,8 @@
     <header>
         <img src= 'Assets/logo.png'>
         <nav>
-            <a href='#'>About</a>
-            <a href='#'>Login</a>
+            <a id = 'aboutBtn' href='../About/about.html'>About</a>
+            <a id = 'loginBtn' href='#'>Login</a>
         </nav>
     </header>
     <section class='topContent'>
