replaced filler text and fine tuned styling

--- a/Desktop/Secret Recipes/About/about.html
+++ b/Desktop/Secret Recipes/About/about.html
@@ -16,10 +16,11 @@
     </header>
     <section class = 'topContent'>
         <img src = '../Home/Assets/developers.jpg'>
+        <img class = 'mobileDev' src = '../Home/Assets/developers-mobile.jpg'>
         <div class = 'topText'>
             <h2>Our Team</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat vel lacus a finibus. Donec quis nulla rhoncus, commodo ipsum ullamcorper, efficitur dui. Etiam sollicitudin mollis orci at vestibulum. Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat. Mauris iaculis, ligula et sodales dapibus, elit justo aliquet arcu, eget imperdiet odio nunc ut eros. Mauris volutpat, quam lobortis facilisis tempus, arcu ipsum ullamcorper enim, eu pellentesque enim ante ac felis. Proin rutrum ante nec mi tincidunt, a feugiat odio venenatis. Duis vulputate eu ex ut lacinia.
+                Secret Family Recipes was overseen and built over the course of a week by students of varying backgrounds and skillsets at Lambda School. Our site is the culmination of the different units taught at Lambda School. Teamwork and communication helped us to launch this site and make it a fully functional and convenient tool. The creative skills of our user-interface, front-end, and back-end developers, with the coordination of our Project Lead helped to deliver this product. We hope you enjoy this site and its many useful tools and features.
             </p>
         </div>
     </section>
@@ -32,8 +33,9 @@
                 <h4>Loralie Flint</h4>
                 <img src = '../Home/Assets/loralie-f.jfif'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/LoralieFlint'>
+                    Loralie is the project manager who helped to coordinate our team to build Secret Family Recipes. She is currently a TL for WEB-29 at Lambda School and is based out of Sandy Utah.
+                        <br>
+                    <a target = '_blank' href = 'https://github.com/LoralieFlint'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -48,8 +50,8 @@
                 <h4>Daniel Gipson</h4>
                 <img src = '../Home/Assets/daniel-g.jpg'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/dannygipson95'>
+                    Based out of Indianapolis, Indiana, Daniel is a current WEB-31 student at Lambda School. His contribution to Secret Family Recipes was to build the content of our Home and About pages. <br>
+                    <a target = '_blank' href = 'https://github.com/dannygipson95'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -65,8 +67,9 @@
                 <h4>Eric Taylor</h4>
                 <img src = '../Home/Assets/eric-t.jfif'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/erictaylor103'>
+                    Eric is one of our front end developers for Secret Family Recipes. Currently enrolled as a Lambda School Student, Eric contributed to designing many of the visual features on the site.
+                    <br>
+                    <a target = '_blank' href = 'https://github.com/erictaylor103'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -77,8 +80,9 @@
                 <h4>Anthony Johnson</h4>
                 <img src = '../Home/Assets/anthony-j.jfif'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/anthonyj713'>
+                    Anthony is another one of our front-end developers for Secret Family Recipes. He is also a Student currently enrolled at Lambda, who worked on bringing the website's front end up to speed.
+                    <br>
+                    <a target = '_blank' href = 'https://github.com/anthonyj713'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -94,8 +98,9 @@
                 <h4>Bryan Bilek</h4>
                 <img src = '../Home/Assets/bryan-b.jfif'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/bryanbilek'>
+                    Bryan is another student currently going to lambda, who is part of our back-end developer team. Bryan helped to set things up server-side for the Secret Family Recipes website.
+                    <br>
+                    <a target = '_blank' href = 'https://github.com/bryanbilek'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -105,8 +110,9 @@
                 <h4>Shun Chiang</h4>
                 <img src = '../Home/Assets/shun-c.png'>
                 <p>
-                    Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat.<br><br>
-                    <a href = 'https://github.com/kkslider2130'>
+                    Shun is another member of our back-end developer team. He helped get the Secret Family Recipe project's server-side up and running. Shun is also a current student of Lambda School.
+                    <br>
+                    <a target = '_blank' href = 'https://github.com/kkslider2130'>
                         <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
                         Visit my Github
                     </a>
@@ -117,9 +123,9 @@
     </section>
     <footer>
         <div class = 'iconBox'>
-            <a href = '#'><img class = 'icon' src = '../Home/Assets/Instagram Icon.png'></a>
-            <a href = '#'><img class = 'icon' src = '../Home/Assets/facebook Icon.png'></a>
-            <a href = '#'><img class = 'icon' src = '../Home/Assets/Twitter Icon.png'></a>
+            <a target = '_blank' href = 'https://www.instagram.com/'> <img class = 'icon' src = '../Home/Assets/Instagram Icon.png'></a>
+            <a target = '_blank' href = 'https://www.facebook.com/'><img class = 'icon' src = '../Home/Assets/facebook Icon.png'></a>
+            <a target = '_blank' href = 'https://twitter.com/'><img class = 'icon' src = '../Home/Assets/Twitter Icon.png'></a>
         </div>
     </footer>
 </body>
