--- a/Desktop/Secret Recipes/Home/index.html
+++ b/Desktop/Secret Recipes/Home/index.html
@@ -23,43 +23,43 @@
             </div>
             <a href = '#'>JOIN</a>
         </div>
-        <h3>A safe, secure place for your favorite recipes</h3>
+        <h3>A safe place for your favorite recipes</h3>
     </section>
     <section class= 'bottomContent'>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat vel lacus a finibus. Donec quis nulla rhoncus, commodo ipsum ullamcorper, efficitur dui. Etiam sollicitudin mollis orci at vestibulum. Sed id luctus augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget quam in lorem dictum gravida. Vestibulum lobortis risus in mollis feugiat. Mauris iaculis, ligula et sodales dapibus, elit justo aliquet arcu, eget imperdiet odio nunc ut eros. Mauris volutpat, quam lobortis facilisis tempus, arcu ipsum ullamcorper enim, eu pellentesque enim ante ac felis. Proin rutrum ante nec mi tincidunt, a feugiat odio venenatis. Duis vulputate eu ex ut lacinia. 
+            Here at Secret Family Recipes, we have a passion for the traditional recipes that so many families have passed down. Notecards and cookbooks can only last so long before they get worn out and become hard to read. We aim to help preserve those family traditions that are so important to so many. Our easy to use site allows you to easily save and confidently preserve your most cherished recipes in a secure place. We make sure that creating a new recipe is easy and fast. Join today and take advantage of not having to worry any longer about where your favorite recipes can be safely stored.   
         </p>
         <div class = 'infoBoxes'>
             <div class = 'info'>
                 <img src = 'Assets/forkKnife.png'>
                 <p>
-                    Pellentesque ullamcorper elementum maximus. Nunc eu neque tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    With an account you can take advantage of unlimited recipe creation, and gain access to other members' culinary creations.
                 </p>
             </div>
             <div class = 'info'>
                 <img src = 'Assets/cake.png'>
                 <p>
-                    Praesent scelerisque metus ut sapien varius venenatis. Nullam quis mi ac est gravida imperdiet. Pellentesque diam ex, varius sed tempus ac, viverra non ligula.
+                    Each recipe card allows our users to add images of your recipes to show off your favorite dishes and show just how good they can look.
                 </p>
             </div>
             <div class = 'info'>
                 <img src = 'Assets/fire.png'>
                 <p>
-                    Proin fringilla libero ac elit varius, tincidunt venenatis augue hendrerit. Maecenas venenatis urna est, vel tincidunt erat facilisis et.  
+                    Easily view prep times and other useful information at a glance to help decide which recipe to use without any unnecessary hassle.  
                 </p>
             </div>
         </div>
         <img src = 'Assets/table.jpg'>
-        <h3>Share and discover recipes</h3>
+        <h3>Save and Access recipes With Ease</h3>
         <p class = 'bottomPar'>
-            Pellentesque eu tincidunt est. Donec auctor sapien sed erat faucibus consequat. Sed non magna volutpat, porttitor nisi sit amet, facilisis lacus. Etiam eu quam quis nisi euismod malesuada. Nunc imperdiet est eget viverra blandit. Quisque odio nunc, ullamcorper eget ex at, lacinia pharetra velit.Pellentesque eu tincidunt est. Donec auctor sapien sed erat faucibus consequat. Sed non magna volutpat, porttitor nisi sit amet, facilisis lacus. Etiam eu quam quis nisi euismod malesuada. Nunc imperdiet est eget viverra blandit. Quisque odio nunc, ullamcorper eget ex at, lacinia pharetra velit. Ut vehicula placerat purus non elementum. Donec mollis mi et felis finibus lacinia a eu dui. Donec faucibus, erat at interdum sagittis, elit odio rutrum ligula, vel hendrerit lacus dolor quis lorem. Aliquam vel semper nisl, a pharetra ante. Vivamus eget euismod leo, at euismod ligula. Praesent finibus sapien turpis, in pellentesque magna convallis vitae. Mauris finibus, quam at consectetur eleifend, justo ex fermentum leo, a sodales orci lorem id risus.
+            Our recipe forms are easy to use and can be easily accessed with a search, to save you so much time searching through old recipe books and cards. Your recipes are always at your fingertips with Secret Family Recipes! The clean layout of our site allows you to read and find your recipes! No need to worry about wear and tear over time. Join today and take advantage of the perks and convenience that we offer!
         </p>
     </section>
     <footer>
         <div class = 'iconBox'>
-            <a href = '#'><img class = 'icon' src = 'Assets/Instagram Icon.png'></a>
-            <a href = '#'><img class = 'icon' src = 'Assets/facebook Icon.png'></a>
-            <a href = '#'><img class = 'icon' src = 'Assets/Twitter Icon.png'></a>
+            <a target = '_blank' href = 'https://www.instagram.com/'> <img class = 'icon' src = 'Assets/Instagram Icon.png'></a>
+            <a target = '_blank' href = 'https://www.facebook.com/'><img class = 'icon' src = 'Assets/facebook Icon.png'></a>
+            <a target = '_blank' href = 'https://twitter.com/'><img class = 'icon' src = 'Assets/Twitter Icon.png'></a>
         </div>
     </footer>
 </body>
