added react app links

--- a/Desktop/Secret Recipes/About/about.html
+++ b/Desktop/Secret Recipes/About/about.html
@@ -11,7 +11,7 @@
         <img src= '../Home/Assets/logo.png'>
         <nav>
             <a id = 'aboutBtn' href='../Home/index.html'>Home</a>
-            <a id = 'loginBtn' href='#'>Login</a>
+            <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
         </nav>
     </header>
     <section class = 'topContent'>
