--- a/Desktop/Secret Recipes/Home/index.html
+++ b/Desktop/Secret Recipes/Home/index.html
@@ -11,7 +11,7 @@
         <img src= 'Assets/logo.png'>
         <nav>
             <a id = 'aboutBtn' href='../About/about.html'>About</a>
-            <a id = 'loginBtn' href='#'>Login</a>
+            <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
         </nav>
     </header>
     <section class='topContent'>
@@ -21,7 +21,7 @@
                 <h2>Secret Family Recipes</h2>
                 <h4>keep, cook, create</h4>
             </div>
-            <a href = '#'>JOIN</a>
+            <a href = 'https://my-recipes.now.sh/register'>JOIN</a>
         </div>
         <h3>A safe place for your favorite recipes</h3>
     </section>
@@ -39,7 +39,7 @@
             <div class = 'info'>
                 <img src = 'Assets/cake.png'>
                 <p>
-                    Each recipe card allows our users to add images of your recipes to show off your favorite dishes and show just how good they can look.
+                    Each recipe card allows our users to set favorites to show off your favorite dishes and access them when you want them.
                 </p>
             </div>
             <div class = 'info'>
