added home link to logo

--- a/Desktop/Secret Recipes/About/about.html
+++ b/Desktop/Secret Recipes/About/about.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <img src= '../Home/Assets/logo.png'>
+        <a href = 'https://my-recipes.now.sh/home'><img src= '../Home/Assets/logo.png'></a>
         <nav>
             <a id = 'aboutBtn' href='../Home/index.html'>Home</a>
             <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
