--- a/Desktop/Secret Recipes/Home/index.html
+++ b/Desktop/Secret Recipes/Home/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <img src= 'Assets/logo.png'>
+       <a href = 'https://my-recipes.now.sh/home'> <img src= 'Assets/logo.png'> </a>
         <nav>
             <a id = 'aboutBtn' href='../About/about.html'>About</a>
             <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
