--- a/Desktop/Secret Recipes/About/about.html
+++ b/Desktop/Secret Recipes/About/about.html
@@ -1,132 +1,157 @@
 <!DOCTYPE html>
-<html lang='en'>
-
-<head>
+<html lang="en">
+  <head>
     <title>Secret Family Recipes</title>
-    <link href = 'CSS/about.css' rel = 'stylesheet'>
-</head>
+    <link href="CSS/about.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href = 'https://my-recipes.now.sh/home'><img src= '../Home/Assets/logo.png'></a>
-        <nav>
-            <a id = 'aboutBtn' href='../Home/index.html'>Home</a>
-            <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
-        </nav>
+      <a href="https://secret-family-recipes-hs2y16jou.now.sh/"
+        ><img src="../Home/Assets/logo.png"
+      /></a>
+      <nav>
+        <a id="aboutBtn" href="../Home/index.html">Home</a>
+        <a id="loginBtn" href="https://secret-family-recipes-hs2y16jou.now.sh/"
+          >Login</a
+        >
+      </nav>
     </header>
-    <section class = 'topContent'>
-        <img src = '../Home/Assets/developers.jpg'>
-        <img class = 'mobileDev' src = '../Home/Assets/developers-mobile.jpg'>
-        <div class = 'topText'>
-            <h2>Our Team</h2>
-            <p>
-                Secret Family Recipes was overseen and built over the course of a week by students of varying backgrounds and skillsets at Lambda School. Our site is the culmination of the different units taught at Lambda School. Teamwork and communication helped us to launch this site and make it a fully functional and convenient tool. The creative skills of our user-interface, front-end, and back-end developers, with the coordination of our Project Lead helped to deliver this product. We hope you enjoy this site and its many useful tools and features.
-            </p>
-        </div>
+    <section class="topContent">
+      <img src="../Home/Assets/developers.jpg" />
+      <img class="mobileDev" src="../Home/Assets/developers-mobile.jpg" />
+      <div class="topText">
+        <h2>Our Team</h2>
+        <p>
+          Secret Family Recipes was overseen and built over the course of a week
+          by students of varying backgrounds and skillsets at Lambda School. Our
+          site is the culmination of the different units taught at Lambda
+          School. Teamwork and communication helped us to launch this site and
+          make it a fully functional and convenient tool. The creative skills of
+          our user-interface, front-end, and back-end developers, with the
+          coordination of our Project Lead helped to deliver this product. We
+          hope you enjoy this site and its many useful tools and features.
+        </p>
+      </div>
     </section>
-    <section class = 'bottomContent'>
-        <img class = 'codeIcon' src = '../Home/Assets/pl-symbol.png'>
-        <h3>Project Lead</h3>
-        <hr>
-        <div class = 'bioBoxes'>
-            <div class = 'bioBox'>
-                <h4>Loralie Flint</h4>
-                <img src = '../Home/Assets/loralie-f.jfif'>
-                <p>
-                    Loralie is the project manager who helped to coordinate our team to build Secret Family Recipes. She is currently a TL for WEB-29 at Lambda School and is based out of Sandy Utah.
-                        <br>
-                    <a target = '_blank' href = 'https://github.com/LoralieFlint'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
-            </div>
+    <section class="bottomContent">
+      <img class="codeIcon" src="../Home/Assets/pl-symbol.png" />
+      <h3>Project Lead</h3>
+      <hr />
+      <div class="bioBoxes">
+        <div class="bioBox">
+          <h4>Loralie Flint</h4>
+          <img src="../Home/Assets/loralie-f.jfif" />
+          <p>
+            Loralie is the project manager who helped to coordinate our team to
+            build Secret Family Recipes. She is currently a TL for WEB-29 at
+            Lambda School and is based out of Sandy Utah.
+            <br />
+            <a target="_blank" href="https://github.com/LoralieFlint">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
         </div>
-        <img class = 'codeIcon' src = '../Home/Assets/css-symbol.png'>
-        <h3>User Interface</h3>
-        <hr>
-        <div class = 'bioBoxes'>
-            <div class = 'bioBox'>
-                <h4>Daniel Gipson</h4>
-                <img src = '../Home/Assets/daniel-g.jpg'>
-                <p>
-                    Based out of Indianapolis, Indiana, Daniel is a current WEB-31 student at Lambda School. His contribution to Secret Family Recipes was to build the content of our Home and About pages. <br>
-                    <a target = '_blank' href = 'https://github.com/dannygipson95'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
-                
-            </div>
+      </div>
+      <img class="codeIcon" src="../Home/Assets/css-symbol.png" />
+      <h3>User Interface</h3>
+      <hr />
+      <div class="bioBoxes">
+        <div class="bioBox">
+          <h4>Daniel Gipson</h4>
+          <img src="../Home/Assets/daniel-g.jpg" />
+          <p>
+            Based out of Indianapolis, Indiana, Daniel is a current WEB-31
+            student at Lambda School. His contribution to Secret Family Recipes
+            was to build the content of our Home and About pages. <br />
+            <a target="_blank" href="https://github.com/dannygipson95">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
         </div>
-        <img class = 'codeIcon' src ='../Home/Assets/react-symbol.png'>
-        <h3>Front End</h3>
-        <hr>
-        <div class = 'bioBoxes'>
-            <div class = 'bioBox'>
-                <h4>Eric Taylor</h4>
-                <img src = '../Home/Assets/eric-t.jfif'>
-                <p>
-                    Eric is one of our front end developers for Secret Family Recipes. Currently enrolled as a Lambda School Student, Eric contributed to designing many of the visual features on the site.
-                    <br>
-                    <a target = '_blank' href = 'https://github.com/erictaylor103'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
-            </div>
-        
-            <div class = 'bioBox'>
-                <h4>Anthony Johnson</h4>
-                <img src = '../Home/Assets/anthony-j.jfif'>
-                <p>
-                    Anthony is another one of our front-end developers for Secret Family Recipes. He is also a Student currently enrolled at Lambda, who worked on bringing the website's front end up to speed.
-                    <br>
-                    <a target = '_blank' href = 'https://github.com/anthonyj713'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
+      </div>
+      <img class="codeIcon" src="../Home/Assets/react-symbol.png" />
+      <h3>Front End</h3>
+      <hr />
+      <div class="bioBoxes">
+        <div class="bioBox">
+          <h4>Eric Taylor</h4>
+          <img src="../Home/Assets/eric-t.jfif" />
+          <p>
+            Eric is one of our front end developers for Secret Family Recipes.
+            Currently enrolled as a Lambda School Student, Eric contributed to
+            designing many of the visual features on the site.
+            <br />
+            <a target="_blank" href="https://github.com/erictaylor103">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
+        </div>
 
-            </div>
+        <div class="bioBox">
+          <h4>Anthony Johnson</h4>
+          <img src="../Home/Assets/anthony-j.jfif" />
+          <p>
+            Anthony is another one of our front-end developers for Secret Family
+            Recipes. He is also a Student currently enrolled at Lambda, who
+            worked on bringing the website's front end up to speed.
+            <br />
+            <a target="_blank" href="https://github.com/anthonyj713">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
         </div>
-        <img class = 'codeIcon' src = '../Home/Assets/node-symbol.jpg'>
-        <h3>Back End</h3>
-        <hr>
-        <div class = 'bioBoxes'>
-            <div class = 'bioBox'>
-                <h4>Bryan Bilek</h4>
-                <img src = '../Home/Assets/bryan-b.jfif'>
-                <p>
-                    Bryan is another student currently going to lambda, who is part of our back-end developer team. Bryan helped to set things up server-side for the Secret Family Recipes website.
-                    <br>
-                    <a target = '_blank' href = 'https://github.com/bryanbilek'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
-            </div>
-            <div class ='bioBox'>
-                <h4>Shun Chiang</h4>
-                <img src = '../Home/Assets/shun-c.png'>
-                <p>
-                    Shun is another member of our back-end developer team. He helped get the Secret Family Recipe project's server-side up and running. Shun is also a current student of Lambda School.
-                    <br>
-                    <a target = '_blank' href = 'https://github.com/kkslider2130'>
-                        <img class = 'socialIcon' src = '../Home/Assets/grey-github.png'>
-                        Visit my Github
-                    </a>
-                </p>
-            </div>
-
+      </div>
+      <img class="codeIcon" src="../Home/Assets/node-symbol.jpg" />
+      <h3>Back End</h3>
+      <hr />
+      <div class="bioBoxes">
+        <div class="bioBox">
+          <h4>Bryan Bilek</h4>
+          <img src="../Home/Assets/bryan-b.jfif" />
+          <p>
+            Bryan is another student currently going to lambda, who is part of
+            our back-end developer team. Bryan helped to set things up
+            server-side for the Secret Family Recipes website.
+            <br />
+            <a target="_blank" href="https://github.com/bryanbilek">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
         </div>
+        <div class="bioBox">
+          <h4>Shun Chiang</h4>
+          <img src="../Home/Assets/shun-c.png" />
+          <p>
+            Shun is another member of our back-end developer team. He helped get
+            the Secret Family Recipe project's server-side up and running. Shun
+            is also a current student of Lambda School.
+            <br />
+            <a target="_blank" href="https://github.com/kkslider2130">
+              <img class="socialIcon" src="../Home/Assets/grey-github.png" />
+              Visit my Github
+            </a>
+          </p>
+        </div>
+      </div>
     </section>
     <footer>
-        <div class = 'iconBox'>
-            <a target = '_blank' href = 'https://www.instagram.com/'> <img class = 'icon' src = '../Home/Assets/Instagram Icon.png'></a>
-            <a target = '_blank' href = 'https://www.facebook.com/'><img class = 'icon' src = '../Home/Assets/facebook Icon.png'></a>
-            <a target = '_blank' href = 'https://twitter.com/'><img class = 'icon' src = '../Home/Assets/Twitter Icon.png'></a>
-        </div>
+      <div class="iconBox">
+        <a target="_blank" href="https://www.instagram.com/">
+          <img class="icon" src="../Home/Assets/Instagram Icon.png"
+        /></a>
+        <a target="_blank" href="https://www.facebook.com/"
+          ><img class="icon" src="../Home/Assets/facebook Icon.png"
+        /></a>
+        <a target="_blank" href="https://twitter.com/"
+          ><img class="icon" src="../Home/Assets/Twitter Icon.png"
+        /></a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
