--- a/Desktop/Secret Recipes/Home/index.html
+++ b/Desktop/Secret Recipes/Home/index.html
@@ -1,66 +1,93 @@
 <!DOCTYPE html>
-<html lang='en'>
-
-<head>
+<html lang="en">
+  <head>
     <title>Secret Family Recipes</title>
-    <link href = 'CSS/index.css' rel = 'stylesheet'>
-</head>
+    <link href="CSS/index.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-       <a href = 'https://my-recipes.now.sh/home'> <img src= 'Assets/logo.png'> </a>
-        <nav>
-            <a id = 'aboutBtn' href='../About/about.html'>About</a>
-            <a id = 'loginBtn' href='https://my-recipes.now.sh/login'>Login</a>
-        </nav>
+      <a href="https://secret-family-recipes-hs2y16jou.now.sh/">
+        <img src="Assets/logo.png" />
+      </a>
+      <nav>
+        <a id="aboutBtn" href="../About/about.html">About</a>
+        <a id="loginBtn" href="https://secret-family-recipes-hs2y16jou.now.sh/"
+          >Login</a
+        >
+      </nav>
     </header>
-    <section class='topContent'>
-        <div class='bannerImage'>
-            <img src='Assets/pasta.jpg'>
-            <div class = 'bannerText'>
-                <h2>Secret Family Recipes</h2>
-                <h4>keep, cook, create</h4>
-            </div>
-            <a href = 'https://my-recipes.now.sh/register'>JOIN</a>
+    <section class="topContent">
+      <div class="bannerImage">
+        <img src="Assets/pasta.jpg" />
+        <div class="bannerText">
+          <h2>Secret Family Recipes</h2>
+          <h4>keep, cook, create</h4>
         </div>
-        <h3>A safe place for your favorite recipes</h3>
+        <a href="https://secret-family-recipes-hs2y16jou.now.sh/register"
+          >JOIN</a
+        >
+      </div>
+      <h3>A safe place for your favorite recipes</h3>
     </section>
-    <section class= 'bottomContent'>
-        <p>
-            Here at Secret Family Recipes, we have a passion for the traditional recipes that so many families have passed down. Notecards and cookbooks can only last so long before they get worn out and become hard to read. We aim to help preserve those family traditions that are so important to so many. Our easy to use site allows you to easily save and confidently preserve your most cherished recipes in a secure place. We make sure that creating a new recipe is easy and fast. Join today and take advantage of not having to worry any longer about where your favorite recipes can be safely stored.   
-        </p>
-        <div class = 'infoBoxes'>
-            <div class = 'info'>
-                <img src = 'Assets/forkKnife.png'>
-                <p>
-                    With an account you can take advantage of unlimited recipe creation, and gain access to other members' culinary creations.
-                </p>
-            </div>
-            <div class = 'info'>
-                <img src = 'Assets/cake.png'>
-                <p>
-                    Each recipe card allows our users to set favorites to show off your favorite dishes and access them when you want them.
-                </p>
-            </div>
-            <div class = 'info'>
-                <img src = 'Assets/fire.png'>
-                <p>
-                    Easily view prep times and other useful information at a glance to help decide which recipe to use without any unnecessary hassle.  
-                </p>
-            </div>
+    <section class="bottomContent">
+      <p>
+        Here at Secret Family Recipes, we have a passion for the traditional
+        recipes that so many families have passed down. Notecards and cookbooks
+        can only last so long before they get worn out and become hard to read.
+        We aim to help preserve those family traditions that are so important to
+        so many. Our easy to use site allows you to easily save and confidently
+        preserve your most cherished recipes in a secure place. We make sure
+        that creating a new recipe is easy and fast. Join today and take
+        advantage of not having to worry any longer about where your favorite
+        recipes can be safely stored.
+      </p>
+      <div class="infoBoxes">
+        <div class="info">
+          <img src="Assets/forkKnife.png" />
+          <p>
+            With an account you can take advantage of unlimited recipe creation,
+            and gain access to other members' culinary creations.
+          </p>
         </div>
-        <img src = 'Assets/table.jpg'>
-        <h3>Save and Access recipes With Ease</h3>
-        <p class = 'bottomPar'>
-            Our recipe forms are easy to use and can be easily accessed with a search, to save you so much time searching through old recipe books and cards. Your recipes are always at your fingertips with Secret Family Recipes! The clean layout of our site allows you to read and find your recipes! No need to worry about wear and tear over time. Join today and take advantage of the perks and convenience that we offer!
-        </p>
+        <div class="info">
+          <img src="Assets/cake.png" />
+          <p>
+            Each recipe card allows our users to set favorites to show off your
+            favorite dishes and access them when you want them.
+          </p>
+        </div>
+        <div class="info">
+          <img src="Assets/fire.png" />
+          <p>
+            Easily view prep times and other useful information at a glance to
+            help decide which recipe to use without any unnecessary hassle.
+          </p>
+        </div>
+      </div>
+      <img src="Assets/table.jpg" />
+      <h3>Save and Access recipes With Ease</h3>
+      <p class="bottomPar">
+        Our recipe forms are easy to use and can be easily accessed with a
+        search, to save you so much time searching through old recipe books and
+        cards. Your recipes are always at your fingertips with Secret Family
+        Recipes! The clean layout of our site allows you to read and find your
+        recipes! No need to worry about wear and tear over time. Join today and
+        take advantage of the perks and convenience that we offer!
+      </p>
     </section>
     <footer>
-        <div class = 'iconBox'>
-            <a target = '_blank' href = 'https://www.instagram.com/'> <img class = 'icon' src = 'Assets/Instagram Icon.png'></a>
-            <a target = '_blank' href = 'https://www.facebook.com/'><img class = 'icon' src = 'Assets/facebook Icon.png'></a>
-            <a target = '_blank' href = 'https://twitter.com/'><img class = 'icon' src = 'Assets/Twitter Icon.png'></a>
-        </div>
+      <div class="iconBox">
+        <a target="_blank" href="https://www.instagram.com/">
+          <img class="icon" src="Assets/Instagram Icon.png"
+        /></a>
+        <a target="_blank" href="https://www.facebook.com/"
+          ><img class="icon" src="Assets/facebook Icon.png"
+        /></a>
+        <a target="_blank" href="https://twitter.com/"
+          ><img class="icon" src="Assets/Twitter Icon.png"
+        /></a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
